--- a/tonconnect-manifest.json
+++ b/tonconnect-manifest.json
@@ -1,5 +1,5 @@
 {
-    "url": "https://yourdomain.com",
+    "url": "https://redmonkey2006.github.io/",
     "name": "TON Pong",
-    "iconUrl": "https://yourdomain.com/icon.png"
+    "iconUrl": "https://redmonkey2006.github.io/icon.png"
 }
