--- a/tonconnect-manifest.json
+++ b/tonconnect-manifest.json
@@ -1,5 +1,5 @@
 {
     "url": "https://redmonkey2006.github.io/",
-    "name": "TON Pong",
+    "name": "index",
     "iconUrl": "https://redmonkey2006.github.io/icon.png"
 }
